packages/server/dist_test/errors/types.d.ts
export interface ServerError {
    code: string;
    message: string;
    data?: Record<string, unknown>;
}
//# sourceMappingURL=types.d.ts.map